# adventr

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/adventr/: cache.py  logger.py  parsers.py  puzzle.py  puzzleinfo.py  timeinfo.py  website.py
src/adventr/_cli/: app.py
src/adventr/ui/: info.py
tests/: test_puzzle.py
